--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 logging.level.org.javamoney=OFF
+spring.datasource.url=jdbc:postgresql://localhost:5432/uy_home_finder
+spring.datasource.username=postgres
+spring.datasource.password=changeme
+spring.jooq.sql-dialect=postgres
