--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,11 @@
-logging.level.org.javamoney=OFF
+spring.application.name=uy-home-finder
+
 spring.datasource.url=jdbc:postgresql://localhost:5432/uy_home_finder
 spring.datasource.username=postgres
 spring.datasource.password=changeme
 spring.jooq.sql-dialect=postgres
+
+logging.level.org.javamoney=OFF
+
+decorator.datasource.datasource-proxy.query.enable-logging=true
+decorator.datasource.datasource-proxy.query.log-level=info
